# d211

./: .gitignore  ReadMe.md  ReleaseNote.md
dl/: .commit
package/: .commit
package/artinchip/: Config.in
package/artinchip/aic-mpp/: aic-mpp.mk
package/artinchip/http-wificonfig/: Config.in  http-wificonfig.mk
package/artinchip/lvgl-ui/: Config.in  lvgl-ui.mk
package/artinchip/qtlauncher/: qtlauncher.mk
package/artinchip/test-adc/: Config.in  test-adc.mk
package/artinchip/test-battery/: Config.in  test-battery.mk
package/artinchip/wifimanager/: wifimanager.mk
package/fs/: Config.in  common.mk
package/fs/ext2/: ext2.mk
package/fs/userfs/: Config.in.userfs1  Config.in.userfs2  Config.in.userfs3  ubinize.cfg.userfs1  ubinize.cfg.userfs2  ubinize.cfg.userfs3  userfs.mk
package/opensbi/: opensbi.mk
package/toolchain/: helpers.mk
package/toolchain/toolchain-external/: Config.in
package/uboot/: uboot.mk
package/utils/: pkg-generic.mk
prebuilt/: .commit
scripts/: .commit  onestep.sh
scripts/support/dependencies/: dependencies.mk
scripts/support/download/: dl-wrapper
scripts/tools/: encrypt_rsa_key.py  mk_image.py  oneclick.sh  pinmux_check.py
source/artinchip/: .commit
source/artinchip/aic-authorization/: CMakeLists.txt
source/artinchip/aic-mpp/: CMakeLists.txt
source/artinchip/gst1-plugins-aic/: gstaicfb.c  gstaicfb.h  gstfbsink.c  gstfbsink.h  gstvedec.c  gstvedec.h  meson.build
source/artinchip/http-wificonfig/: CMakeLists.txt  http.c
source/artinchip/http-wificonfig/config/: hostapd.conf  udhcpd.conf
source/artinchip/http-wificonfig/html/: fail_result.html  index.html  success_result.html
source/artinchip/libuserid/: CMakeLists.txt
source/artinchip/lvgl-ui/: CMakeLists.txt  aic_ui.h
source/artinchip/lvgl-ui/aic_widgets/: CMakeLists.txt
source/artinchip/lvgl-ui/aic_widgets/aic_canvas/: canvas_image.c  canvas_image.h
source/artinchip/lvgl-ui/aic_widgets/aic_canvas/v9/: lv_aic_canvas.c  lv_aic_canvas.h
source/artinchip/lvgl-ui/aic_widgets/aic_player/v9/: lv_aic_player.c  lv_aic_player.h
source/artinchip/openssl-hwengine/: CMakeLists.txt
source/artinchip/qtlauncher/: QtLauncher.pro  mainwindow.cpp  mainwindow.h  qtlauncher.qrc
source/artinchip/reg-dump/: CMakeLists.txt
source/artinchip/test-adc/: CMakeLists.txt  adc.c
source/artinchip/test-battery/: CMakeLists.txt  test_battery.c
source/artinchip/test-ce/: CMakeLists.txt
source/artinchip/test-clock/: CMakeLists.txt
source/artinchip/test-common/: sample_base.h
source/artinchip/test-dma-buf/: CMakeLists.txt
source/artinchip/test-dvp/: CMakeLists.txt  test_dvp.c
source/artinchip/test-efuse/: test_efuse.c
source/artinchip/test-fb/: CMakeLists.txt  test_fb.c
source/artinchip/test-gpio/: CMakeLists.txt
source/artinchip/test-keyadc/: CMakeLists.txt
source/artinchip/test-libmad/: CMakeLists.txt
source/artinchip/test-lvgl/: CMakeLists.txt  lv_ge2d.c
source/artinchip/test-mtop/: CMakeLists.txt  mtop.c
source/artinchip/test-pm-mbox/: CMakeLists.txt  test_pm_mbox.c
source/artinchip/test-touchscreen/: CMakeLists.txt
source/artinchip/test-uart/: CMakeLists.txt  test_uart.c  testuart.c
source/artinchip/test-watchdog/: CMakeLists.txt  test_wdt.c
source/linux-5.10/: .commit
source/opensbi/: .commit
source/uboot-2021.10/: .commit
source/uboot-2021.10/cmd/: aicupg.c  mtd.c
source/uboot-2021.10/common/: board_f.c
source/uboot-2021.10/configs/: d211_aishoot88_nor_defconfig  d211_demo100_nand_defconfig  d211_demo128_nand_defconfig  (+7 more)
tools/: .commit  onestep.sh
tools/scripts/: get_fs_max_size.py  mk_image.py  mk_private_resource.py  oneclick.sh  pinmux_check.py
(+252 files in other folders)
